--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </form>
 
 <div class="navInicio">
- <a href="file:///storage/emulated/0/Download/teste51/inicio-fim.html">PONTOS INICIAIS</a>
+ <a href="./inicio-fim.html">PONTOS INICIAIS</a>
  
  <!-- file:///C:/Users/kledisom.oliveira/Desktop/projetos/area%2051/inicio-fim.html -->
  <a>PONTOS FINAIS</a>
