--- a/rpm-artigo.html
+++ b/rpm-artigo.html
@@ -22,10 +22,14 @@
     }
 	
 	#titulo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	 border: 1px solid red;
 	 height: 50px;
 	 width: 100%;
 	 margin: 10px;
+	 color: #fff;
 	}
 	
 	.formInicio {
@@ -76,13 +80,16 @@
      background-color: lime;
 	 border-radius: 5px;
 	 margin: 10px;
+	  padding: 10px;
+	 color: #000;
+	 text-decoration: none;
 	}
 	
 </style>
 
 </head>
 <body id="flexContainer">
- <div id="titulo">RPM</div>
+ <div id="titulo">RPM | ART</div>
  
     <form class="formInicio">
 		<div class="forms">
