--- a/teares.html
+++ b/teares.html
@@ -86,6 +86,9 @@
      background-color: lime;
 	 border-radius: 5px;
 	 margin: 10px;
+	 padding: 10px;
+	 color: #000;
+	 text-decoration: none;
 	}
 	
 </style>
@@ -110,8 +113,7 @@
 </div>
 
 <div class="navInicio2">
- <a>HOME</a>
- <a>INICIAR</a>
+ <a href="./index.html">HOME</a>
 </div>
 
 
