--- a/inicio-fim.html
+++ b/inicio-fim.html
@@ -8,7 +8,7 @@
 
 <!-- <link href="../styles/pagina-do-editor.css" rel="stylesheet"/> -->
 <style>
- * {margin: 0; padding: 0}
+ * {margin: 0; padding: 0; box-sizing: border-box}
   
     body {
 	background-color: #363636;
@@ -19,13 +19,18 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	border: 1px solid lime;
+	
     }
 	
 	#titulo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	 border: 1px solid red;
 	 height: 50px;
 	 width: 100%;
 	 margin: 10px;
+	 color: #fff;
 	}
 	
 	.formInicio {
@@ -34,7 +39,6 @@
 	 justify-content: center;
 	 align-items: center;
 	 border: 1px solid red;
-	 //height: 100px;
 	 width: 100%;
 	 margin: 10px;
 	}
@@ -76,6 +80,9 @@
      background-color: lime;
 	 border-radius: 5px;
 	 margin: 10px;
+	 padding: 10px;
+	 color: #000;
+	 text-decoration: none;
 	}
 	
 </style>
