--- a/ocorrencia.html
+++ b/ocorrencia.html
@@ -278,7 +278,7 @@
 <div class="navInicio2">
 <div class="btn-bottom">
   <a href="./teares.html">TEARES</a>
-  <a href="./index.html">HOME</a>
+  <a href="./index51.html">HOME</a>
   
    <input type="button" value="URDUME" onClick="exibir()" />
  <input type="button" value="TRAMA" onClick="ocultar()" />
