--- a/rpm-artigo.html
+++ b/rpm-artigo.html
@@ -168,8 +168,8 @@
 
 
 <div class="navInicio2">
- <a href="index.html">HOME</a>
- <a onclick="save()">SALVAR</a>
+ <a href="index.html" onclick="save()">HOME</a>
+<!--  <a onclick="save()">SALVAR</a> -->
 </div>
 
 <script>
@@ -285,7 +285,7 @@ let art = [
       saveIN('rpm11', rpm[11].value);
 	  saveIN('art11', art[11].value);		  
 	
-		confirm('Você deseja salvar esses dados?')
+		//confirm('Você deseja salvar esses dados?')
     };
 	
 	for(let i = 0; i < 12; i++) {
