--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, user-scalable=no" >
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
  
   <title>meuApp</title>
 
@@ -28,9 +29,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	 border: 1px solid red;
 	 height: 50px;
-	 width: 100%;
+	 width: 98%;
 	 margin: 10px;
 	 color: #fff;
 	}
@@ -39,17 +39,17 @@
 	 display: flex;
 	 justify-content: center;
 	 align-items: center;
-	 border: 1px solid red;
 	 height: 100px;
-	 width: 100%;
+	 width: 98%;
 	 margin: 10px;
 	}
 	
 	.formInicio input {
 	 height: 30px;
 	 width: 55px;
-	 border: 1px solid red;
+	 /* border: 1px solid red; */
 	 margin-top: 10px;
+	 text-align: center;
 	 
 	}
 	
@@ -65,9 +65,9 @@
 	 flex: 1;
 	 justify-content: center;
 	 align-items: center;
-	 border: 1px solid red;
+	/*  border: 1px solid red; */
 	 height: 150px;
-	 width: 100%;
+	 width: 98%;
 	}
 	
 	.navInicio a {
@@ -90,9 +90,9 @@
 	 flex: 1;
 	 justify-content: center;
 	 align-items: center;
-	 border: 1px solid red;
+	 /* border: 1px solid red; */
 	 height: 100px;
-	 width: 100%;
+	 width: 98%;
 	}
 	
 	.navInicio2 a {
@@ -109,6 +109,17 @@
 	 height: 60px;
 	 width: 100px;
 	}
+
+	#btn-graficos {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	#btn-graficos button{
+	  margin: 5px;
+	}
+
+
 	
 </style>
 
@@ -137,24 +148,46 @@
 	    </div>
     </form>
 
-<div class="navInicio">
- <a href="./inicio-fim.html">PONTOS INICIAIS</a>
- 
- <!-- file:///C:/Users/kledisom.oliveira/Desktop/projetos/area%2051/inicio-fim.html -->
- <a href="./inicio-fim.html">PONTOS FINAIS</a>
- <a href="rpm-artigo.html">INSERIR ARTIGOS</a>
- <a>INSERIR RPM</a>
-</div>
+<main style="border-top: 1px solid pink;border-bottom: 1px solid pink;">
+	<div class="navInicio">
+	<a href="./inicio-fim.html" onclick="saveInitial()">PONTOS INICIAIS</a>
+	<a href="./inicio-fim.html" onclick="saveInitial()">PONTOS FINAIS</a>
+	<a href="rpm-artigo.html" onclick="saveInitial()">INSERIR ARTIGOS</a>
+	<a onclick="saveInitial()">INSERIR RPM</a>
+	</div>
 
-<div class="navInicio2">
- <!-- <a  >SET ...</a> -->
- <a href="./teares.html" onclick="saveInitial()">INICIAR</a>
- <a href="./relatorio01.html">REL01</a>
- <a href="./relatorio02.html">REL02</a>
- <a id="limpa-storage">CLEAR</a>
-</div>
+	<div class="navInicio2">
+	<a href="./teares.html" onclick="saveInitial()">INICIAR</a>
+	<a href="./relatorio01.html" onclick="saveInitial()">REL01</a>
+	<a href="./relatorio02.html" onclick="saveInitial()">REL02</a>
+	<a id="limpa-storage">CLEAR</a>
+	</div>
+</main>
+<nav id="btn-graficos">
+	<button>URDUME</button>
+    <button>TRAMA</button> 
+</nav>
+
+<canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+<canvas id="myChart2" style="width:100%;max-width:700px"></canvas>
 
 <script>
+	const btnsGrafico = document.querySelectorAll('#btn-graficos>button');
+	const chart01 = document.querySelector('#myChart');
+	const chart02 = document.querySelector('#myChart2');
+
+	chart01.style.display = 'block';
+	chart02.style.display = 'none';
+	
+
+	btnsGrafico[0].addEventListener("click", () => {
+		chart02.style.display = 'none';
+		chart01.style.display = 'block'
+    });
+	btnsGrafico[1].addEventListener("click", function() {
+		chart01.style.display = 'none';
+		chart02.style.display = 'block'
+    });
 
 var start = document.getElementById('start');
 var end = document.getElementById('end');
@@ -169,7 +202,7 @@ function saveInitial() {
  localStorage.setItem('grupo', nGroup.value);	
  localStorage.setItem('total', total.value);	
  
- alert('salvo!')
+ 
 }
 
 document.getElementById('start').value = localStorage.getItem('inicio');
@@ -177,10 +210,104 @@ document.getElementById('end').value = localStorage.getItem('fim');
 document.getElementById('total').value = localStorage.getItem('total');
 
 document.getElementById('limpa-storage').onclick = function(){
-	localStorage.clear();
-	location.reload()
-}
+	let result = confirm('Deseja apagar os dados do teste anterior?');
+	if(result) {
+	 localStorage.clear();
+	 location.reload();
+	}
 
+};
+//graficos 01
+var xValues = ["Fio Colado",
+ "ponta de fio", 
+ "Rolo embaraçado",
+  "fio fraco L/D",
+   "fio fraco L/E",
+   "fio fraco meio",
+   "carritel",
+   "fio bambo",
+   "slub",
+   "bucha",
+   "outros",
+   "fio grosso",
+   ];
+var yValues = [55, 49, 44, 24, 15,10,10,10,10,10,10,20];
+var barColors = [
+  "#b91d47",
+  "#00aba9",
+  "#2b5797",
+  "#e8c3b9",
+  "#1e7145",
+  "yellow",
+  "purple",
+  "brown",
+  "orange",
+  "red",
+  "lime",
+  "#00FFFF"
+
+];
+
+new Chart("myChart", {
+  type: "bar",
+  data: {
+    labels: xValues,
+    datasets: [{
+      backgroundColor: barColors,
+      data: yValues
+    }]
+  },
+  options: {
+    title: {
+      display: true,
+      text: "URDUME"
+    }
+  }
+});
+
+//graficos 02
+var xValues = ["nó na trama",
+ "trama fraca", 
+ "defeito bobina",
+  "conical vazio",
+   "quebra trama cala",
+   "pré-alimentador A",
+   "pré-alimentador B",
+   "slub",
+   "voltando trama",
+   "outros",
+   ];
+var yValues = [55, 49, 44, 24, 15,10,10,10,10,10];
+var barColors = [
+  "#b91d47",
+  "#00aba9",
+  "#2b5797",
+  "#e8c3b9",
+  "#1e7145",
+  "yellow",
+  "purple",
+  "brown",
+  "orange",
+  "red",
+  "lime",
+];
+
+new Chart("myChart2", {
+  type: "bar",
+  data: {
+    labels: xValues,
+    datasets: [{
+      backgroundColor: barColors,
+      data: yValues
+    }]
+  },
+  options: {
+    title: {
+      display: true,
+      text: "TRAMA"
+    }
+  }
+});
 </script>
  
 
