--- a/ocorrencia.html
+++ b/ocorrencia.html
@@ -18,7 +18,6 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	border: 1px solid lime;
 	height: 100vh;
     }
 	
@@ -59,22 +58,13 @@
 	}
 	
 	.ocor input {
-	width: 50px;
-	height: 20px;
+	width: 80px;
+	height: 30px;
 	background-color: #fff;
+	text-align: center;
+	font-size: 1.5rem
 
 	}
-	
-	<!-- #display10, #display20, #display30, -->
-    <!-- #display40, #display50, #display60, -->
-	<!-- #display70, #display80, #display90, -->
-	<!-- #display100 -->
-	<!-- { -->
-	 <!-- width: 50px; -->
-	 <!-- height: 20px; -->
-	 <!-- background-color: #fff; -->
-	 
-	<!-- } -->
 	
 	#formInicio label {
 	 width: 150px;
@@ -92,9 +82,10 @@
 	}
 	
 	.ocor {
-	 border: 1px solid blue;
+	 /* border: 1px solid blue; */
 	 display: flex;
 	 align-items: center;
+	 margin: 5px;
 	}
 	
 	.btn-bottom a, .btn-bottom input {
@@ -110,7 +101,6 @@
 		color: #000;
 		font-size: 0px;
 		margin-left: 200px;
-		<!-- transition: margin-left 2s; -->
 		transition: font-size 5s;
 		transition-delay: 1s;
 	
@@ -120,7 +110,6 @@
 		color: #fff;
 		font-size: 0px;
 		margin-left: 200px;
-		<!-- transition: margin-left 2s; -->
 		transition: font-size 5s;
 		transition-delay: 1s;
 	
@@ -278,7 +267,7 @@
 <div class="navInicio2">
 <div class="btn-bottom">
   <a href="./teares.html">TEARES</a>
-  <a href="./index51.html">HOME</a>
+  <a href="./index.html">HOME</a>
   
    <input type="button" value="URDUME" onClick="exibir()" />
  <input type="button" value="TRAMA" onClick="ocultar()" />
