--- a/relatorio02.html
+++ b/relatorio02.html
@@ -20,7 +20,8 @@
 	 text-align: center;
 	 border-collapse: collapse;
 	 border: 1px solid #000;
-	 width: 95%
+	 width: 95%;
+	 color: #000;
 	}
 	
 	<!-- #nTear, #nArt { -->
