--- a/relatorio02.html
+++ b/relatorio02.html
@@ -11,9 +11,11 @@
  * {margin: 0; padding: 0}
   
     body {
-	background-color: #363636;
+	/* background-color: #363636; */
 	font-size: 10px;
-	color: #fff;
+	color: #000;
+	font-weight: bold;
+	font-size: 0.9rem
 	}
 	
 	table {
@@ -21,7 +23,9 @@
 	 border-collapse: collapse;
 	 border: 1px solid #000;
 	 width: 95%;
-	 color: #000;
+	 border-top: none;
+	 border-right: none;
+	 border-left: none;
 	}
 	
 	<!-- #nTear, #nArt { -->
@@ -76,25 +80,62 @@
 	 margin: 50px;
 	  font-size: 20px;
 	}
+
+	.cabecalho {
+		width: 95%;
+		margin-bottom: 20px;
+	}
+	.cabecalho img{
+		width: 100%;
+	}
+
+	td {
+		height: 20px;
+		border: 1px solid #000;
+	}
+
+	.tirar-bordas {
+	   border: none;
+	   
+	}
+	.tirar-bordas td{
+	   border: none;
+	   border-left: none
+	}
+
+	#selecao {
+		border-top: 1 !important;
+	}
+
+	@media print {
+		.btn-back {
+			display: none;
+		}
+	}
 	
 </style>
 
 </head>
 <body id="flexContainer">
- 
+ <header>
+	<div class="cabecalho">
+		<img src="./fm51_cabecalho_page1.PNG" alt="">
+	</div>
+ </header>
     <table border="1">
        <thead>
         <tr></tr>
        </thead>
        <tbody id="selecao">
-		 <tr>
+		 <tr class="tirar-bordas">
 			 <td colspan='2' id="date">DATA:</td>
 			 <td colspan='2' id="start">INICIO:</td>
 			 <td colspan='2'id="end">FIM:</td>
 			 <td colspan='2' id="time">TEMPO/TOTAL:</td>
+			 <td></td>
 		 </tr>
-		 <tr><th>&nbsp;</th><tr>
-		 <tr>
+		 <tr style="border: none"><th style="border: none">&nbsp;</th><tr>
+		 <tr style="border-top: 1px solid black">
 			 <td>Nº do TEAR</td>
 			 <td>ARTIGO</td>
 			 <td>RPM/TEAR</td>
@@ -103,7 +144,7 @@
 			 <td>TERMINO</td>
 			 <td>PONTOS DURANTE</td>
 			 <td>% EFICIENCIA</td>
-			 <td style="width: 400px">OBSERVAÇÃO</td>
+			 <td style="width: 400px; color: #000">OBSERVAÇÃO</td>
 			 
 		 </tr>
 		 <tr class="teares">
@@ -354,8 +395,8 @@
     </table>
 
 
-<a href="index.html">back</a>
-<button onclick="imprimir()">print</button>
+<a class="btn-back" href="index.html">back</a>
+<button class="btn-back" onclick="imprimir()">print</button>
 
 
 <script>
