adição dos campos assinaturas

--- a/relatorio02.html
+++ b/relatorio02.html
@@ -107,6 +107,11 @@
 		border-top: 1 !important;
 	}
 
+	.btn-back {
+		height: 30px;
+		width: 50px
+	}
+
 	@media print {
 		.btn-back {
 			display: none;
@@ -355,7 +360,7 @@
 			 <td>0</td>
 			 <td>0</td>
 		 </tr>
-		 <tr>
+		 <!-- <tr>
 			 <td>0</td>
 			 <td>0</td>
 			 <td>0</td>
@@ -376,7 +381,7 @@
 			 <td>0</td>
 			 <td>0</td>
 			 <td>0</td>
-		 </tr>
+		 </tr> -->
 		 <tr>
 			 <td>0</td>
 			 <td>0</td>
@@ -391,9 +396,11 @@
 		
 		 
 	   </tbody>
-
     </table>
 
+	<div class="cabecalho" style="margin-top: 10px">
+		<img src="./assinaturas.PNG" alt="">
+	</div>
 
 <a class="btn-back" href="index.html">back</a>
 <button class="btn-back" onclick="imprimir()">print</button>
