--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
 <canvas id="myChart2" style="width:100%;max-width:700px"></canvas>
 
 <script>
+alert('Atenção o sistema está em manutenção...');
+	
 	const btnsGrafico = document.querySelectorAll('#btn-graficos>button');
 	const chart01 = document.querySelector('#myChart');
 	const chart02 = document.querySelector('#myChart2');
