--- a/relatorio02.html
+++ b/relatorio02.html
@@ -149,6 +149,7 @@
 			 <td>TERMINO</td>
 			 <td>PONTOS DURANTE</td>
 			 <td>% EFICIENCIA</td>
+			 <td>% EFICIENCIA</td>
 			 <td style="width: 400px; color: #000"><span>OBSERVAÇÃO</span></td>
 			 
 		 </tr>
