--- a/relatorio02.html
+++ b/relatorio02.html
@@ -150,7 +150,7 @@
 			 <td>PONTOS DURANTE</td>
 			 <td>% EFICIENCIA</td>
 			 <td>% EFICIENCIA</td>
-			 <td style="width: 400px; color: #000"><span>OBSERVAÇÃO</span></td>
+			 <td style="width: 400px; color: #000">OBSERVAÇÃO</td>
 			 
 		 </tr>
 		 <tr class="teares">
@@ -409,7 +409,7 @@
 
 <script>
 var nodelist = document.querySelectorAll('td');
-	for (let i = 13; i < nodelist.length; i++){
+	for (let i = 14; i < nodelist.length; i++){
 	  nodelist[i].innerHTML = '&nbsp;'
 	};
 
